# ai-ww-kefu

./: .editorconfig  .gitignore  .prettierignore  README.md  commitlint.config.cjs  eslint.config.js  package.json  pnpm-lock.yaml  pom.xml  pyproject.toml  tsconfig.base.json
.github/workflows/: contract.yml
.husky/: commit-msg  pre-commit
apps/sdk-jsbridge/: README.md  package.json  tsconfig.json
apps/web-admin/: README.md  eslint.config.js  index.html  package.json  tsconfig.json  vite.config.ts
apps/web-agent/: README.md  index.html  package.json  tailwind.config.ts  vite.config.ts
apps/web-c/: README.md  eslint.config.js  index.html  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
docs/exec-plan/: 00-执行计划总览.md  01-阶段与里程碑.md  02-Backlog-EPIC.md  03-Agent角色与职责.md  04-契约优先工作流.md  05-技术任务清单.md  06-验收-质量门禁.md  07-风险与并行策略.md  08-Prompt模板库.md  PROGRESS.md
docs/prd/: 00-总览.md  01-业务流程与场景.md  02-C端-WebH5-需求.md  03-AI中枢-需求.md  04-人工座席台-需求.md  05-管理后台-需求.md  06-系统架构与技术选型.md  07-高可用与高并发设计.md  08-数据模型与接口.md  09-非功能性需求.md  10-里程碑与排期.md
infra/k8s/: README.md
infra/observability/: README.md
infra/terraform/: README.md
scripts/: start-local.sh
services/agent-bff/: Dockerfile  README.md  pom.xml
services/ai-hub/: Dockerfile  README.md  pyproject.toml
services/ai-hub/src/ai_hub/: __init__.py  decision.py  faq_client.py  handoff.py  kb_client.py  livectx_client.py  llm_client.py  main.py  prompt.py  routing_client.py  tool_loop.py
services/ai-hub/src/ai_hub/prompts/: __init__.py  registry.py
services/ai-hub/src/ai_hub/prompts/templates/: anchor_console__1.md  default__1.md  live_room__1.md  report_flow__1.md  vod_detail__1.md
services/ai-hub/src/ai_hub/tools/: __init__.py  registry.py
services/ai-hub/tests/: test_decision.py  test_faq_path.py  test_handoff.py  test_handoff_path.py  test_infer.py  test_livectx_enrich.py  test_paths_priority.py  test_prompt.py  test_prompt_registry.py  test_rag_path.py  test_regression.py  test_tool_loop.py  test_tools_path.py
services/audit-svc/: Dockerfile  README.md  pom.xml
services/gateway-ws/: Dockerfile  Makefile  README.md  go.mod
services/kb-svc/: Dockerfile  README.md  pyproject.toml
services/kb-svc/src/kb_svc/: __init__.py  bm25.py  chunker.py  embed.py  ingest.py  main.py  models.py  rerank.py  search.py  seed_loader.py  store.py  tokenize.py
services/kb-svc/src/kb_svc/seeds/: seed_default.json
services/kb-svc/tests/: test_api.py  test_bm25.py  test_chunker.py  test_embed.py  test_search.py
services/livectx-svc/: Dockerfile  README.md  pom.xml
services/llm-router/: Dockerfile  README.md  pyproject.toml
services/llm-router/src/llm_router/: __init__.py  health.py  kms.py  main.py  openai_adapter.py  profiles.py  quota.py  router.py
services/llm-router/tests/: test_api.py  test_kms.py  test_profiles.py  test_quota.py  test_router_mock.py
services/notify-svc/: Dockerfile  README.md  pom.xml
services/report-svc/: Dockerfile  README.md  pom.xml
services/routing-svc/: Dockerfile  README.md  pom.xml
services/session-svc/: Dockerfile  README.md  pom.xml
services/tool-svc/: Dockerfile  README.md  pom.xml
(+256 files in other folders)
