[project]
name = "ai-kefu-py"
version = "0.0.0"
description = "AI + 人工 客服系统(直播/点播)— Python 服务工作区"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = [
    "datamodel-code-generator>=0.26.1",
    "ruff>=0.6.9",
    "mypy>=1.11.2",
    "pytest>=8.3.3",
]

[tool.uv.workspace]
members = [
    "services/llm-router",
    "services/ai-hub",
    # 后续:
    # "services/kb-svc",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "B", "UP", "S", "ASYNC"]
ignore = ["S101"]  # allow asserts in tests

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S"]

[tool.pytest.ini_options]
addopts = "-ra --strict-markers"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
no_implicit_optional = true
