[project]
name = "kb-svc"
version = "0.0.0"
description = "ai-kefu 知识库 — 切片 + 嵌入 + Hybrid 检索(向量 + BM25 + RRF + Reranker)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.31.0",
    "httpx>=0.27.2",
    "pydantic>=2.9.2",
    "python-json-logger>=2.0.7",
]

[dependency-groups]
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.9",
    "mypy>=1.11.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kb_svc"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
